# bookmarkt

./: .build.yml  .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  default.nix  shell.nix
res/: chromium.html  firefox.html  firefox_backup.json  netscape.html
src/: bookmark.rs  collection.rs  folder.rs  item.rs  items.rs  lib.rs  main.rs  netscape.rs  netscape_bookmark.rs  netscape_item.rs  node_ref_ext.rs
templates/: bookmark.html  bookmark.j2  children.j2  folder.html  folder.j2  netscape.j2
