[package]
name = "bookmarkt"
version = "0.0.4"
authors = ["vlnk <vlnk@protonmail.com>", "giraffe <giraffe@cyberzoo.xyz>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "A Netscape Bookmark File format parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kuchiki = "0.8.1"
derive_builder = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
askama = "0.8"
